# MUNagent

./: .gitignore  AGENTS.md  README.md  environment.yml  introduction.md  plan.md  pyproject.toml
design/: ui.md
design/designer/: 01-data-chats.md  02-ui-modes.md  03-agent-interaction.md  index.md
design/prompt-controller/: index.md
docs/api/: agents.md  config.md  core.md  engine.md  index.md  llm.md  prompts.md  scenario.md  security.md  server.md
docs/design/: 01-overview.md  02-scenario-design.md  03-event-model.md  04-state-machine.md  05-agent-harness.md  06-directives-adjudication.md  07-engine.md  08-config.md  09-gui.md  10-roadmap.md  11-cost-and-caching.md  index.md  prompt-analysis.md
docs/tools/: agent-api-pdf-to-markdown-guide.md  designer-agent-tools.md  how-to-find-pdf.md  search-archive-pdf.md
munagent/: __init__.py  cli.py  engine.py
munagent/agents/: __init__.py  base.py  chair.py  delegate.py  designer.py  dm.py  recorder.py
munagent/config/: __init__.py  load.py  models.py  persist.py
munagent/core/: __init__.py  bus.py  (+10 more)
scripts/: llm_smoke_test.py  llm_stream_test.py  probe_mineru_ebook.py  verify_designer_tools.py  verify_search_tools.py
tests/: conftest.py  test_agents.py  test_bus.py  test_chat_title.py  test_config.py  test_design_task.py  test_designer_agent.py  test_designer_tools.py  test_engine.py  test_events.py  test_llm_client.py  test_recorder.py  test_reducer.py  test_render.py  test_sanitize.py  test_scenario.py  test_scenario_files.py  test_server.py  test_state_machine.py  test_thinking.py  test_timezone.py
(+126 files in other folders)
